# bioinfo-docker

./: Makefile  README.md  pyproject.toml
bioinfo_docker/: __init__.py
dockerfiles/ubuntu-22.04/bowtie2-2.4.5/: Dockerfile
scripts/: entrypoint_bowtie2.sh
