[tool.poetry]
name = "bioinfo-docker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bioinfo_docker"}]

[tool.poetry.dependencies]
python = "^3.10"
uplink = "^0.9.7"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
